force-app/main/default/objects/cgc_sync__Sync_History__c/cgc_sync__Sync_History__c.object-meta.xml
<CustomObject>
    <description>Each sync run on the Mobile App is registered in this table along with status infos and KPIs.</description>
    <label>Sync History</label>
    <nameField>
        <displayFormat>SH-{0000000000}</displayFormat>
        <label>Sync History Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>