force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__Connection_Type_At_Start__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Connection_Type_At_Start__c</fullName>
    <description>Connection type at startup, value coming from Cordova navigator.connection.</description>
    <label>Connection Type At Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>