force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__Device_ID__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Device_ID__c</fullName>
    <description>Installation Id of the device.</description>
    <label>Device Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>