force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__End_Date_Time__c</fullName>
    <description>Timestamp when the sync type has finished</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>