force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__KPIData__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__KPIData__c</fullName>
    <description>Collects and stores sync key performance indicator (KPI) data in a compressed format when a sync operation is run. The KPI data includes metrics such as duration and record count for named fetch trees (NFT), named queries (NQ), and tracked objects (TO).</description>
    <inlineHelpText>Collects and stores sync key performance indicator (KPI) data in a compressed format when a sync operation is run. The KPI data includes metrics such as duration and record count for named fetch trees (NFT), named queries (NQ), and tracked objects (TO). This field can store up to 131072 characters of compressed KPI data.</inlineHelpText>
    <label>Key Performance Indicator Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>