force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__KPISbmsStatus__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__KPISbmsStatus__c</fullName>
    <description>Indicates the status of KPIs that are submitted for analysis.</description>
    <label>KPI Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>