force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__Number_Of_Detailed_Logs__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Number_Of_Detailed_Logs__c</fullName>
    <description>Provide number of detailed log messages</description>
    <label>Number of detailed Logs</label>
    <summaryForeignKey>cgc_sync__Sync_History_Detail__c.cgc_sync__Sync_History__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>