force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__Number_Of_Upload_Records__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Number_Of_Upload_Records__c</fullName>
    <description>Sum of uploaded records</description>
    <label>Uploaded Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>