force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__Sync_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Completion_Time__c</fullName>
    <description>Time taken in seconds to complete a sync process, excludes the queue waiting time.</description>
    <formula>( cgc_sync__End_Date_Time__c - cgc_sync__Start_Date_Time__c ) * 24*60*60 - cgc_sync__Time_In_Queue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time taken in seconds to complete a sync process, excludes the queue waiting time. If the Queue sync users at maximum limit setting is disabled, the field takes the Duration value.</inlineHelpText>
    <label>Sync Completion Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>