force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__Sync_History_Log__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_History_Log__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;/one/one.app#/alohaRedirect/apex/SyncHistory?deviceid=&apos;+ cgc_sync__Device_ID__c + &apos;&amp;datestart=&apos; + TEXT(cgc_sync__Start_Date_Time__c) + &apos;&amp;dateend=&apos; + TEXT(cgc_sync__End_Date_Time__c),  Name , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync History Log</label>
    <type>Text</type>
</CustomField>