force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__Sync_State__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_State__c</fullName>
    <description>Holds synchronization state.</description>
    <label>Sync State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Connection Issue</fullName>
            </value>
            <value>
                <fullName>Download Issue</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Synchronized</fullName>
            </value>
            <value>
                <fullName>Up and Download Issues</fullName>
            </value>
            <value>
                <fullName>Upload Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>