force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__Sync_Success__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Run Completed</label>
    <type>Checkbox</type>
</CustomField>