force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__Sync_Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Triggered_By__c</fullName>
    <label>Sync Triggered By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Scheduler</fullName>
            </value>
            <value>
                <fullName>SyncOnOnline</fullName>
                <label>Sync On Online</label>
            </value>
            <value>
                <fullName>SyncOnResume</fullName>
                <label>Sync On Resume</label>
            </value>
            <value>
                <fullName>SyncOnStartup</fullName>
                <label>Sync On Startup</label>
            </value>
            <value>
                <fullName>User Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>