force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Type__c</fullName>
    <label>Sync Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Background Sync</fullName>
            </value>
            <value>
                <fullName>FSOD</fullName>
            </value>
            <value>
                <fullName>Initial Sync</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
            <value>
                <fullName>Regular Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>