force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__Time_In_Queue__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Time_In_Queue__c</fullName>
    <description>Queue waiting time in seconds.</description>
    <inlineHelpText>Queue waiting time in seconds. It should be zero if the Queue Sync User feature is disabled.</inlineHelpText>
    <label>Time In Queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>