force-app/main/default/objects/cgc_sync__Sync_History__c/fields/cgc_sync__Total_Api_Calls__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Total_Api_Calls__c</fullName>
    <description>Sum of all API Calls made during the sync</description>
    <label>Total API Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>